@@ -5,6 +5,8 @@ ver 0.21 (not yet released)
   - "outputs" prints the plugin name
   - "outputset" sets runtime attributes
   - close connection when client sends HTTP request
+* database
+  - simple: scan audio formats
 * player
   - "one-shot" single mode
 * input
